update configs, run spotless code style check